[Issue-15] Finish migrating Plan ViewControllers from objc into swift

--- a/SafetyPlan/Plan.storyboard
+++ b/SafetyPlan/Plan.storyboard
@@ -93,5 +93,47 @@
             </objects>
             <point key="canvasLocation" x="783" y="1448"/>
         </scene>
+        <!--Instructions-->
+        <scene sceneID="lGc-Mn-p25">
+            <objects>
+                <viewController storyboardIdentifier="InstructionsVC" id="fu8-VT-pwt" customClass="InstructionsViewController" customModule="Safety_Plan" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Kv2-on-ALG"/>
+                        <viewControllerLayoutGuide type="bottom" id="W8Q-GD-6Re"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="H96-cD-hNR">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sSf-Kg-uFp">
+                                <rect key="frame" x="20" y="52" width="374" height="824"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <string key="text">Suicidal thoughts can seem like they will last forever - but these thoughts and feelings pass with time. Having a plan in place that can help guide you through difficult moments can help keep you safe. 
+
+This Safety Plan is designed so that when you are dealing with suicidal thoughts, you can start at the beginning and continue down the steps until you feel safe. 
+
+We recommend working with a therapist or calling a suicide hotline for assistance filling out this safety plan.</string>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="sSf-Kg-uFp" firstAttribute="leading" secondItem="H96-cD-hNR" secondAttribute="leading" constant="20" symbolic="YES" id="2hS-Em-C8X"/>
+                            <constraint firstItem="sSf-Kg-uFp" firstAttribute="top" secondItem="Kv2-on-ALG" secondAttribute="bottom" constant="8" symbolic="YES" id="MUu-Yc-8vv"/>
+                            <constraint firstAttribute="trailing" secondItem="sSf-Kg-uFp" secondAttribute="trailing" constant="20" symbolic="YES" id="Pln-cR-Kq7"/>
+                            <constraint firstAttribute="bottom" secondItem="sSf-Kg-uFp" secondAttribute="bottom" constant="20" symbolic="YES" id="aGW-Oa-bHd"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2aC-6h-vVH"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Instructions" id="zuJ-gm-Rmd"/>
+                    <connections>
+                        <outlet property="textView" destination="sSf-Kg-uFp" id="ydI-Uv-7by"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UFV-ad-0Yz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2090" y="737"/>
+        </scene>
     </scenes>
 </document>
